--- a/reactprj/src/index.css
+++ b/reactprj/src/index.css
@@ -1,3 +1,5 @@
+@import '~bootstrap/scss/bootstrap';
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
