--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -1,10 +1,40 @@
-/* The following block can be included in a custom.scss */
+@font-face {
+  font-family: 'Anybody';
+  src: url('./assets/fonts/Jura-VariableFont_wght.ttf') format('truetype'),
+}
 
-/* make the customizations */
 $theme-colors: (
-  'info': tomato,
-  'danger': teal
+  'primary': teal,
 );
+
+.body-custom{
+  font-family: 'Anybody', sans-serif;
+}
+.nav-bar-custom {
+  background-color: teal;
+}
+.nav-bar-custom .navbar-brand.nav-brand-custom {
+  font-size: 2rem;
+}
+.link-custom{
+  color: teal;
+  font-size: 2rem;
+  transition: color 0.1s ease;
+  &:hover {
+    color: #ebebeb;
+  }
+}
+
+.section-light{
+  background-color: #ebebeb;
+  color: #353535;
+  padding: '50px 0';
+}
+.section-dark{
+  background-color: #353535;
+  color: white;
+  padding: '50px 0';
+}
 
 /* import bootstrap to set changes */
 @import 'bootstrap/scss/bootstrap';
