--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -28,12 +28,17 @@ $theme-colors: (
 .section-light{
   background-color: #ebebeb;
   color: #353535;
-  padding: '50px 0';
+  padding: 100px 50px;
 }
-.section-dark{
+.section-dark, .section-footer{
   background-color: #353535;
   color: white;
-  padding: '50px 0';
+}
+.section-light, .section-dark{
+  padding: 100px 50px;
+}
+.section-footer{
+  padding: 25px 50px;
 }
 
 /* import bootstrap to set changes */
