--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -30,7 +30,7 @@ $theme-colors: (
   color: #353535;
   padding: 100px 50px;
 }
-.section-dark, .section-footer{
+.section-dark, .section-links{
   background-color: #353535;
   color: white;
 }
