--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -7,7 +7,8 @@ $theme-colors: (
   'primary': teal,
   'secondary': #c2c2c2,
   'danger': tomato,
-  'light': #ebebeb
+  'light': #ebebeb,
+  'dark':  #353535,
 );
 
 .body-custom{
