--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -30,6 +30,14 @@ $theme-colors: (
   }
 }
 
+.img-container {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .section-light{
   padding: 100px 50px;
 }
