--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -30,12 +30,20 @@ $theme-colors: (
   }
 }
 
-.img-container {
-  width: 200px;
-  height: 200px;
+.img-container, .img-container-lg {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.img-container {
+  width: 200px;
+  height: 200px;
+}
+
+.img-container-lg {
+  width: 75%;
+  height: 400px;
 }
 
 .section-light{
