m09-Geolocalització acabat, key bindings wip (problemes d'importació de keypress)

--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -49,5 +49,10 @@ $theme-colors: (
   font-size: 0.8rem;
 }
 
+.map-popup{
+  background-color: teal;
+  border: 2px solid white;
+  border-radius: 3px;
+}
 /* import bootstrap to set changes */
 @import 'bootstrap/scss/bootstrap';
