--- a/reactprj/src/App.scss
+++ b/reactprj/src/App.scss
@@ -3,12 +3,14 @@
   src: url('./assets/fonts/Jura-VariableFont_wght.ttf') format('truetype'),
 }
 
+
 $theme-colors: (
   'primary': teal,
   'secondary': #c2c2c2,
   'danger': tomato,
   'light': #ebebeb,
   'dark':  #353535,
+  'primary-dark': rgb(7, 107, 107),
 );
 
 .body-custom{
@@ -31,6 +33,9 @@ $theme-colors: (
   }
 }
 
+.fullheight{
+  height: 100%;
+}
 .section-light{
   padding: 100px 50px;
 }
@@ -54,5 +59,7 @@ $theme-colors: (
   border: 2px solid white;
   border-radius: 3px;
 }
+
 /* import bootstrap to set changes */
 @import 'bootstrap/scss/bootstrap';
+
